xs:date is not just `YYYY-MM-DD`
https://www.w3schools.com/xml/schema_dtypes_date.asp